syntax = "proto3";
package milvus.proto.segcore;

option go_package = "github.com/milvus-io/milvus/internal/proto/segcorepb";
import "schema.proto";

message RetrieveResults {
  schema.IDs ids = 1;
  repeated int64 offset = 2;
  repeated schema.FieldData fields_data = 3;
}

message LoadFieldMeta {
  int64 min_timestamp = 1;
  int64 max_timestamp = 2;
  int64 row_count = 3;
}

message LoadSegmentMeta {
  // TODOs
  repeated LoadFieldMeta metas = 1;
  int64 total_size = 2;
}

message InsertRecord {
  repeated schema.FieldData fields_data = 1;
  int64 num_rows = 2;
}